--- a/album-manager-front/src/css/global/main.css
+++ b/album-manager-front/src/css/global/main.css
@@ -13,7 +13,7 @@
   /* home */
   --home-background: #2e2e2e;
   --homeTitle-color: #d8c99d;
-  --homeText-color: white;
+  --homeText-color: whitesmoke;
 }
 body {
   margin: 0;
