--- a/album-manager-front/src/css/albumCard.module.css
+++ b/album-manager-front/src/css/albumCard.module.css
@@ -10,3 +10,10 @@
   border: 2px solid #d8c99d;
   max-width: 250px;
 }
+
+@media screen and (min-width: 481px) {
+  .card {
+    max-width: 45vw;
+    align-items: center;
+  }
+}
