--- a/album-manager-front/src/css/home.module.css
+++ b/album-manager-front/src/css/home.module.css
@@ -13,3 +13,12 @@
   border-radius: 2px;
   text-shadow: rgb(0, 0, 0) 2px 2px;
 }
+
+@media screen and (min-width: 481px) {
+  .cards {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+}
