--- a/album-manager-front/src/css/addtracks.module.css
+++ b/album-manager-front/src/css/addtracks.module.css
@@ -1,13 +1,15 @@
 .input {
   background-color: whitesmoke;
   margin: 0.5em;
+  border-radius: 3px;
 }
 
 .textfields {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 @media screen and (min-width: 481px) {
