--- a/album-manager-front/src/css/addtracks.module.css
+++ b/album-manager-front/src/css/addtracks.module.css
@@ -1,5 +1,5 @@
 .input {
-  background-color: whitesmoke;
+  background-color: rgba(245, 245, 245, 0.788);
   margin: 0.5em;
   border-radius: 3px;
 }
