--- a/album-manager-front/src/css/home.module.css
+++ b/album-manager-front/src/css/home.module.css
@@ -19,8 +19,8 @@
   margin: 1em;
   padding: 0.4em;
   display: flex;
+  justify-content: center;
   align-items: center;
-  align-self: center;
 }
 
 @media screen and (min-width: 481px) {
