--- a/album-manager-front/src/css/albumInfos.module.css
+++ b/album-manager-front/src/css/albumInfos.module.css
@@ -18,3 +18,16 @@
   text-align: left;
   border-radius: 5px;
 }
+
+@media screen and (min-width: 481px) {
+  .infosAlbum,
+  .infosTracks {
+    width: 40vw;
+  }
+
+  .albuminfo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+}
